force-app/main/default/objects/Contact/fields/Consultancy_Project_Document_Forwarded__c.field-meta.xml
<CustomField>
    <fullName>Consultancy_Project_Document_Forwarded__c</fullName>
    <label>Consultancy: Project Document Forwarded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>