force-app/main/default/objects/Contact/fields/HR_Documents_Verified__c.field-meta.xml
<CustomField>
    <fullName>HR_Documents_Verified__c</fullName>
    <label>HR: Documents Verified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>