force-app/main/default/objects/Contact/fields/HR_Interview_Completed__c.field-meta.xml
<CustomField>
    <fullName>HR_Interview_Completed__c</fullName>
    <label>HR: Interview Completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>