force-app/main/default/objects/Contact/fields/HR_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>HR_Years_of_Experience__c</fullName>
    <label>HR: Years of Experience</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>