force-app/main/default/objects/Contact/fields/IT_Badge_Ready__c.field-meta.xml
<CustomField>
    <fullName>IT_Badge_Ready__c</fullName>
    <label>IT: Badge Ready?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>