force-app/main/default/objects/Contact/fields/Number_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases__c</fullName>
    <label>Number of Cases</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>